Load our framework image. Zolal

--- a/index.Rmd
+++ b/index.Rmd
@@ -33,7 +33,7 @@ The output of HRRR and ERA5 are summarized in GRIB2 and NetCDF formats, respecti
 
 
 ### Packages
-Here is the required packages to preprocess the data.
+Here is the required packages for this project.
 ```{r, message=F, warning=F}
 library(raster)     # managing rasters
 library(rgdal)      # managing rasters
@@ -47,6 +47,7 @@ library(xts)        # timeseries plots
 library(dygraphs)   # timeseries plots
 library(gridExtra)  # timeseries plots
 library(rnoaa)      # NOAA data
+library(png)        # load png
 
 
 knitr::opts_chunk$set(cache=TRUE)  # cache the results for quick compiling
@@ -109,6 +110,12 @@ if(runn){
 
 The following code loads the HRRR data and preprocesses them, creating the rasters and dataframes that we need for visualization and analysis. Each file of this dataset contains a raster (correponding to an hour of a day) for the variable that you specify.
 Again, user should input the year, name of the variable, coordinates of the weather station and directory of the files.
+
+```{r message=F, warning=F, results='hide', fig.width=8, fig.height=4}
+img <- readPNG("./Data/Framework.png")
+grid::grid.raster(img)
+```
+
 ```{r message=F, warning=F, results='hide'}
 runn=F
 if(runn){
@@ -241,31 +248,6 @@ p1=gplot(mask(crop(monthly_mean_HRRR[[10]],extent(ny_bound)),ny_bound))+
 p2=gplot(mask(crop(monthly_mean_ERA5[[10]],extent(ny_bound)),ny_bound))+ 
   geom_tile( aes( fill=value ) )+
   scale_fill_continuous(type='viridis',name="Temperature")+
-  xlab(NULL)+
-  ylab(NULL)
-
-ggarrange(p1,p2,nrow=1)
-```
-
-### Resample from fine to coarse, or coarse to fine?
-```{r message=F, warning=F, results='hide', fig.width=10, fig.height=4}
-
-# comparing resample methods (from fine to coarse and vise versa)
-HERRR_to_ERA5_resample <- resample(monthly_mean_HRRR[[10]],monthly_mean_ERA5[[10]],method="bilinear")
-monthly_mean_Diff_1 <- HERRR_to_ERA5_resample-monthly_mean_ERA5[[10]]
-
-ERA5_to_HRRR_resample <- resample(monthly_mean_ERA5[[10]],monthly_mean_HRRR[[10]],method="bilinear")
-monthly_mean_Diff_2 <- monthly_mean_HRRR[[10]]-ERA5_to_HRRR_resample
-
-p1=gplot(mask(crop(monthly_mean_Diff_1,extent(ny_bound)),ny_bound))+ 
-  geom_tile( aes( fill=value ) )+
-  scale_fill_continuous(type = "viridis",name="Temperature")+
-  xlab(NULL)+
-  ylab(NULL)
-
-p2=gplot(mask(crop(monthly_mean_Diff_2,extent(ny_bound)),ny_bound))+ 
-  geom_tile( aes( fill=value ) )+
-  scale_fill_continuous(type = "viridis",name="Temperature")+
   xlab(NULL)+
   ylab(NULL)
 
@@ -405,6 +387,31 @@ plot(mask(monthly_min_Diff_brick,ny_bound),nr=4)
 monthly_max_Diff_brick=brick(monthly_max_Diff)
 names(monthly_max_Diff_brick)=ls_names
 plot(mask(monthly_max_Diff_brick,ny_bound),nr=4)
+```
+
+### Resample from fine to coarse, or coarse to fine?
+```{r message=F, warning=F, results='hide', fig.width=10, fig.height=4}
+
+# comparing resample methods (from fine to coarse and vise versa)
+HERRR_to_ERA5_resample <- resample(monthly_mean_HRRR[[10]],monthly_mean_ERA5[[10]],method="bilinear")
+monthly_mean_Diff_1 <- HERRR_to_ERA5_resample-monthly_mean_ERA5[[10]]
+
+ERA5_to_HRRR_resample <- resample(monthly_mean_ERA5[[10]],monthly_mean_HRRR[[10]],method="bilinear")
+monthly_mean_Diff_2 <- monthly_mean_HRRR[[10]]-ERA5_to_HRRR_resample
+
+p1=gplot(mask(crop(monthly_mean_Diff_1,extent(ny_bound)),ny_bound))+ 
+  geom_tile( aes( fill=value ) )+
+  scale_fill_continuous(type = "viridis",name="Temperature")+
+  xlab(NULL)+
+  ylab(NULL)
+
+p2=gplot(mask(crop(monthly_mean_Diff_2,extent(ny_bound)),ny_bound))+ 
+  geom_tile( aes( fill=value ) )+
+  scale_fill_continuous(type = "viridis",name="Temperature")+
+  xlab(NULL)+
+  ylab(NULL)
+
+ggarrange(p1,p2,nrow=1)
 ```
 
 # Conclusions
